--- a/config.json
+++ b/config.json
@@ -1,6 +1,5 @@
 {
-	"ip":"FrostySmp.gamename.net",
-	"port": "26952",
-	"name": "afk_bot",
-	"auto-night-skip":"true"
+	"ip":"Frost_Pro.aternos.me",
+	"port": "55534",
+	"name": "loliambot",
 }
